--- a/musicAudio.html
+++ b/musicAudio.html
@@ -7,7 +7,7 @@
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <title>Title</title>
-  <link rel="stylesheet" href="../public/css/music.css">
+  <link rel="stylesheet" href="public/css/music.css">
  </head>
  <body>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
@@ -90,7 +90,7 @@
 
 
 </div>
-<script src="../public/js/music.js"></script>
+<script src="public/js/music.js"></script>
 
  </body>
 </html>
