新增显示歌词功能及解决一些bug

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <div id="music">
     <div class="top">
-         <a href="javascript:;" class="menu" id="menu">歌单</a>
-         <input type="text" id="search" placeholder="搜索歌曲"></input>
-         <a href="javascript:;" class="history" id="history">历史</a>
+        <a href="javascript:;" class="menu" id="menu">歌单</a>
+        <input type="text" id="search" placeholder="搜索歌曲"/>
+        <i class="search-icon" id="search-icon"></i>
+        <a href="javascript:;" class="history" id="history">历史</a>
          <div id="m_list" style="display:none">
              <p><span class="songname">海阔天空</span><span class="remove1">删除</span></p>
              <p><span class="songname">刚刚好</span><span class="remove1">删除</span></p>
