--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="Description" content="">
   <title>Title</title>
   <link rel="stylesheet" href="public/css/music.css">
-  <link rel="prefetch" href="http://ws.stream.qqmusic.qq.com/C100002qcJuX3lO3EZ.m4a?fromtag=0&guid=126548448" />
+  <link rel="prefetch" href="http://ws.stream.qqmusic.qq.com/C100001yS0N33yPm1B.m4a?fromtag=0&guid=126548448" />
  </head>
  <body>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
